[package]
name = "httpd"
version = "0.0.1"
edition = "2021"

[workspace]
members = ["logging", "utils"]

[profile.release]
opt-level = 3

[features]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = " 1.36.0", features = ["full"] }
bytebuffer = "2.2.0"
glob = { version = "0.3.1" }
smallvec = { version = "1.13.1" }
utils = { path = "./utils" }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }

# compression
flate2 = { version = "1.0.28" }
brotli = { version = "3.4.0" }

# config
toml = { version = "0.8.10" }
serde = { version = "1.0.197", features = ["derive"] }

# ssl
tokio-rustls = { version = "0.25.0" }
rustls-pemfile = { version = "2.1.0" }

# loggging
log = { version = "0.4.21", features = ["kv"] }
logging = { path = "./logging" }
