[package]
name = "httpd"
version = "0.0.1"
edition = "2021"

[workspace]
members = ["logging", "utils"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = " 1.36.0", features = ["full"] }
bytebuffer = { version = "2.2.0" }
glob = { version = "0.3.1" }
smallvec = { version = "1.13.1" }
utils = { path = "./utils" }
base64 = { version = "0.22.0" }
sha1 = { version = "0.10.6" }
slab = { version = "0.4.9" }
regex = { version = "1.10.3" }
woothee = { version = "0.13.0" }
pest = { version = "2.7.8" }
pest_derive = { version = "2.7.8" }

# compression
flate2 = { version = "1.0.28" }
brotli = { version = "3.4.0" }

# config
toml = { version = "0.8.10" }
serde = { version = "1.0.197", features = ["derive"] }

# ssl
tokio-rustls = { version = "0.26.0" }
rustls-pemfile = { version = "2.1.0" }

# loggging
log = { version = "0.4.21", features = ["kv", "kv_serde"] }
logging = { path = "./logging" }
