[package]
name = "logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.21", features = ["kv"] }
smallvec = "1.13.1"
tokio = { version = "1.36.0", features = ["fs", "rt"] }
utils = { path = "../utils" }
