[package]
name = "logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.21", features = ["kv", "kv_serde"] }
pin-project-lite = "0.2.13"
serde = "1.0.197"
serde_json = "1.0.114"
smallvec = "1.13.1"
tokio = { version = "1.36.0", features = [
    "fs",
    "rt",
    "sync",
    "io-util",
    "io-std",
] }
utils = { path = "../utils" }
